change document page style

--- a/app/globals.css
+++ b/app/globals.css
@@ -328,7 +328,7 @@
   /* Base colors */
   --background: oklch(0.985 0 0);
   --foreground: oklch(0.145 0 0);
-  --card: oklch(0.98 0 0);
+  --card: oklch(1 0 89.876);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(0.98 0 0);
   --popover-foreground: oklch(0.145 0 0);
@@ -1055,3 +1055,7 @@ form{
 }
 
 
+[data-element="watermark"],
+.watermark-layer {
+    display: none !important;
+}
